# duatic_gazebo

./: CMakeLists.txt  README.md  package.xml  repos.list
.github/workflows/: build-humble.yml  build-jazzy.yml  build-kilted.yml  build-lyrical.yml  build-rolling.yml  ci.yml  pre-commit.yml  reusable_ici.yml
docker/: docker-compose.yml
isaac/isaac_lab/: alpha_example.py
isaac/isaac_sim/: ros2_alpha_example.py  start_isaac.sh
isaac/scripts/: create_usd_alpha.py  create_usd_dynaarm.py  isaac_sim_setup.sh  xacro_to_urdf.py
launch/: gazebo.launch.py  ros_gz_bridge.launch.py  spawn.launch.py
models/AdjTable/: model.config  model.sdf
models/AnesthesiaMachine/: model.config  model.sdf
models/Apriltag41_12_00000/: model.sdf
models/Apriltag41_12_00001/: model.sdf
models/Apriltag41_12_00002/: model.sdf
models/Apriltag41_12_00003/: model.sdf
models/Apriltag41_12_00004/: model.config  model.sdf
models/Apriltag41_12_00005/: model.config  model.sdf
models/BMWCart/: model.sdf
models/BPCart/: model.sdf
models/BedTable/: model.sdf
models/BedsideTable/: model.sdf
models/BloodPressureMonitor/: model.config  model.sdf
models/Chair/: model.sdf
models/ElderLadyPatient/: model.sdf
models/FemaleVisitorSit/: model.config  model.sdf
models/IVStand/: model.sdf
models/InstrumentCart1/: model.config  model.sdf
models/InstrumentCart2/: model.config  model.sdf
models/MaleVisitorOnPhone/: model.config
models/MaleVisitorSit/: model.config  model.sdf
models/MetalCabinet/: model.config  model.sdf
models/OfficeChairBlack/: model.config  model.sdf
models/PatientFSit/: model.config  model.sdf
models/PatientWheelChair/: model.config  model.sdf
models/PotatoChipChair/: model.config  (+1 more)
scripts/: start_sim.py
test/: launch_gazebo_warehouse.py
urdf/: duatic_gazebo.urdf.xacro
worlds/: duatic_empty.sdf  duatic_office.sdf  hospital.sdf  logimat.sdf  office_v2.sdf  warehouse.sdf
(+59 files in other folders)
